update: Dockerfile